welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:25: error: not found: type couleur
def isFacingTrail(c:couleur)
                    ^SlugSnail:8: error: type mismatch;
 found   : Unit
 required: Boolean
		if (isFacingTrail(c:Color))
                                 ^SlugSnail:29: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return false
           ^SlugSnail:29: warning: enclosing method isFacingTrail has result type Unit: return value discarded
    return false
    ^SlugSnail:32: error: not found: value testCouleur
  testCouleur = getCouleurSol()
  ^SlugSnail:34: error: not found: value testCouleur
 	if (testCouleur == couleur)
            ^SlugSnail:34: error: not found: value couleur
 	if (testCouleur == couleur)
                           ^SlugSnail:36: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  	  return true
                 ^SlugSnail:36: warning: enclosing method isFacingTrail has result type Unit: return value discarded
  	  return true
          ^SlugSnail:40: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
     return false
            ^SlugSnail:40: warning: enclosing method isFacingTrail has result type Unit: return value discarded
     return false
     ^